Bump z-index of veggie-burger, and Labs logo layout fix

--- a/static/src/stylesheets/module/commercial/paidfor/_paidfor-band.scss
+++ b/static/src/stylesheets/module/commercial/paidfor/_paidfor-band.scss
@@ -37,5 +37,10 @@
 
     .inline-glabs-logo__svg {
         margin-top: $gs-baseline / 4;
+        margin-right: $gs-column-width * 2;
+
+        @include mq(desktop) {
+            margin-right: 0;
+        }
     }
 }
